--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -5,3 +5,9 @@ body{
     /* font-family: Arial, Helvetica, sans-serif; */
     font-family: "Inter", serif;
 }
+.p-drawer-right .p-drawer {
+    max-width: 14rem;
+    height: 99.7%;
+    border-top-left-radius: 12px;
+    border-bottom-left-radius: 12px;
+}
